[package]
name = "pcf85063a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal-async = { version = "0.1.0-alpha.3" }
defmt = { version = "0.3", optional = true }

[features]
defmt = ["dep:defmt"]
